--- a/src/App.scss
+++ b/src/App.scss
@@ -1,2 +1,6 @@
 @import '../src/sass/Navbar.scss';
-@import '../src/variables/variables.scss';
+@import '../src/variables/_variables.scss';
+@import '../src/sass/HeroBanner.scss';
+@import '../src/sass/HorizontalScrollBar.scss';
+@import '../src/sass/ExerciseCard.scss';
+@import '../src/sass/HeroBanner.scss';
